tinker的补丁包如何打,多渠道时如何打都明白了

--- a/2.tinker的用法.md
+++ b/2.tinker的用法.md
@@ -1,73 +1,148 @@
 @[TOC](tinker的用法)
 
 
-## 1.IOC  反射加注解
+## 1.如何使用
 
-每个一个小的框架会单独建一个包，其实是模仿别人写 xutils早期的第三方框架 viewIoc  http   dao  图片加载  思考自己怎么去实现。源码   xutils 和 ButterKnife
+　　[接入指南](https://github.com/Tencent/tinker/wiki/Tinker-%E6%8E%A5%E5%85%A5%E6%8C%87%E5%8D%97)
 
+　　配置参考本项目中的moudle: "tinker",所有类中,crash包中的类可以不用复制过去.注意service中的`SampleResultService`这个类
 
-## 2.xutils 源码阅读和使用
+　　`SampleResultService`这个类复制`监听`了补丁包是否安装成功,还配置了`如果安装成功在息屏时重启应用的功能.`
 
-```
-// handlerType --> class  获取setContentView()方法
-Method setContentViewMethod = handlerType.getMethod("setContentView", int.class);
-// 反射执行该方法
-setContentViewMethod.invoke(activity, viewId);
-```
+　　以下两个方法是必须要调用的:
 
 ```
-View view = finder.findViewById(viewInject.value(), viewInject.parentId());
-if (view != null) {
-    // 可以操作所有修饰
-    field.setAccessible(true);
-    // 反射注入属性
-    field.set(handler, view);
+        //tinker的安装
+        TinkerInstaller.install(appLike) 或
+        TinkerInstaller.install(appLike,
+            loadReporter, patchReporter, patchListener,
+            SampleResultService.class, upgradePatchProcessor);
+            
+        //安装补丁包
+        TinkerInstaller.onReceiveUpgradePatch(application.applicationContext, path)
+```
+
+
+## 2.遇到的坑:
+
+### 2.1 app.gradle中旧的apk、混淆的mappting.txt、R.txt文件配置问题
+
+以下对应的路径，应该在打新的补丁包时修改为旧的apk等文件的路径。
+
+正常情况下:
+
+1. `多渠道打包`的旧路径应该修改：build-bakApk- <font color=red size=5>tinker-date(date是旧apk当时打包的实际)||这是个文件夹</font>，红色的为多渠道打包的路径也就是`tinkerBuildFlavorDirectory `的路径
+2. 普通打包的旧路径应该修改：build-bakApk- <font color=red size=5>tinker-buildType(debug|release)-date(date是旧apk当时打包的实际)||这是个文件</font>，红色的为多渠道打包的路径也就是`tinkerBuildFlavorDirectory `的路径
+
+```
+ext {
+    //for some reason, you may want to ignore tinkerBuild, such as instant run debug build?
+    tinkerEnabled = true
+
+    //for normal build
+    //old apk file to build patch apk
+    tinkerOldApkPath = "${bakPath}/tinker-release-0510-12-21-10.apk"
+    //proguard mapping file to build patch apk
+    tinkerApplyMappingPath = "${bakPath}/tinker-release-0510-12-21-10-mapping.txt"
+    //resource R.txt to build patch apk, must input if there is resource changed
+    tinkerApplyResourcePath = "${bakPath}/tinker-release-0510-12-21-10-R.txt"
+
+    //only use for build all flavor, if not, just ignore this field
+    //多渠道打包时旧的apk、mapping.txt、R.txt文件配置的路径
+    tinkerBuildFlavorDirectory = "${bakPath}/tinker-0510-20-52-38"
 }
 ```
 
-- 动态代理设计模式不详细介绍，插件开发 Hook技术 再去详细讲解     
-- 属性注入 ： 利用反射去  获取Annotation --> value --> findViewById  --> 反射注入属性  
-- 事件注入 ：利用反射去  获取Annotation --> value --> findViewById  -->  setOnclickListener --> 动态代理反射执行方法
+### 2.2 多渠道打包时,不在bak文件夹中生成对应的混淆mapping.txt和R.txt的问题
 
 
+　　打了日志发现把mapping.txt文件拷贝的时候原路径应该为flavor1Release,但是tinker的demo给的路径就是variant.dirName 日志打印为flavor1/release,所以就找不到对应的mapping.txt文件,也就导致了打出来的补丁包有问题
 
-## 3..ButterKnife 源码阅读和使用
+　　解决办法是:<font color=red>如果有多渠道打包的情况下,需要把variant.dirName举例:flavor1/release　　修改为flavor1Release</font>，写一个getFlavorDir函数进行修改
 
 ```
-@Retention(CLASS) @Target(FIELD)
-public @interface Bind {  
-    /** View ID to which the field will be bound. */  
-    int[] value();
+def getFlavorDir(String dirName){    //修改 variant.dirName  默认为flavor1/release 修改为了 flavor1Release
+    def split = dirName.split(File.separator)
+    project.logger.error "${split[0]}---${split[1]}"
+    def firstUpperCase = split[1].substring(0,1).toUpperCase()
+    project.logger.error firstUpperCase
+    def substring = split[1].substring(1)
+    project.logger.error substring
+    "${split[0]}$firstUpperCase$substring"
 }
 ```
 
-@Retention(CLASS) 编译时的注解
+```
+    android.applicationVariants.all { variant ->
+        /**
+         * task type, you want to bak
+         */
+        def taskName = variant.name
+
+        tasks.all {
+            if ("assemble${taskName.capitalize()}".equalsIgnoreCase(it.name)) {
+
+                it.doLast {
+                    copy {
+                        def fileNamePrefix = "${project.name}-${variant.baseName}"
+                        def newFileNamePrefix = hasFlavors ? "${fileNamePrefix}" : "${fileNamePrefix}-${date}"
+
+                        def destPath = hasFlavors ? file("${bakPath}/${project.name}-${date}/${variant.flavorName}") : bakPath
+
+                        if (variant.metaClass.hasProperty(variant, 'packageApplicationProvider')) {
+                            def packageAndroidArtifact = variant.packageApplicationProvider.get()
+                            if (packageAndroidArtifact != null) {
+                                try {
+                                    from new File(packageAndroidArtifact.outputDirectory.getAsFile().get(), variant.outputs.first().apkData.outputFileName)
+                                } catch (Exception e) {
+                                    from new File(packageAndroidArtifact.outputDirectory, variant.outputs.first().apkData.outputFileName)
+                                }
+                            } else {
+                                from variant.outputs.first().mainOutputFile.outputFile
+                            }
+                        } else {
+                            from variant.outputs.first().outputFile
+                        }
+
+                        into destPath
+                        rename { String fileName ->
+                            fileName.replace("${fileNamePrefix}.apk", "${newFileNamePrefix}.apk")
+                        }
+                        
+                        
+                        project.logger.error variant.baseName //flavor1-release
+                        project.logger.error variant.dirName  //flavor1/release
+
+                        def dirName = variant.dirName
+
+                        if(hasFlavors){
+                            dirName = getFlavorDir(dirName)  //修改成为flavor1Release
+                            project.logger.error dirName
+                        }
 
 
+                        //打了日志发现把mapping.txt文件拷贝的时候原路径应该为flavor1Release,但是tinker的demo给的路径就是variant.dirName 日志打印为flavor1/release,
+                        //所以就找不到对应的mapping.txt文件,也就导致了打出来的补丁包有问题
+                        from "${buildDir}/outputs/mapping/$dirName/mapping.txt"
+                        into destPath
+                        rename { String fileName ->
+                            fileName.replace("mapping.txt", "${newFileNamePrefix}-mapping.txt")
+                        }
 
-流程   
-1. 编译的时候ButterKnifeProcessor  生成 .java  --> class文件
+                        from "${buildDir}/intermediates/symbols/$dirName/R.txt"
+                        from "${buildDir}/intermediates/symbol_list/$dirName/R.txt"
+                        from "${buildDir}/intermediates/runtime_symbol_list/$dirName/R.txt"
+                        into destPath
+                        rename { String fileName ->
+                            fileName.replace("R.txt", "${newFileNamePrefix}-R.txt")
+                        }
+                    }
+                }
+            }
+        }
+    }
+```
 
-2. 运行是viewBinder.bind(finder, target, source);
-
-
-
-相比较而言  butterKnife可能更加高效  有一个好用的插件   个人推荐butterKnife
-
-
-## 4.自己动手
-自己实现会增加在开发过程中的一些常用功能，网络注解。
-
-读源码：
-1. 使用的时候出了问题，
-2. 想自己去实现，
-3. 我想实现类似的功能。自己实现的方式跟xutils类似。
-
-
-
-
-5.最后扩展
-网络检测的问题,下周六开始写Android Studio插件,事先有时间就去了解
 
 
 
