tinker的功能跟官网demo类似了

--- a/2.tinker的用法.md
+++ b/2.tinker的用法.md
@@ -143,6 +143,21 @@ def getFlavorDir(String dirName){    //修改 variant.dirName  默认为flavor1/
     }
 ```
 
+### 2.3 Windows的AndroidStudio多渠道打包时出现了编译错误
+
+```
+Execution failed for task ':tinkerpatch:tinkerProcessFlavor1ReleaseResourceId'.
+> java.io.FileNotFoundException: E:\AndroidStudioProjects\AndroidPracticeFiles\HotFix\tinkerpatch\build\intermediates\tinker_intermediates\values_backup
+```
+
+解决办法：
+
+1. <font color=red size = 5>删除build\intermediates\tinker_intermediates目录重新使用tinkerFlavor1Release构建。！！！如果不行请看第二条解决方案</font>
+2. <font color=red size = 5>全选build\intermediates下的所有目录删除可以删除的目录，重新使用tinkerFlavor1Release构建</font>
+
+
+注意：多渠道打出来的补丁包多测试下，如果不行再重新打！！感觉腾讯这个TinkerPatch的插件有问题
+
 
 
 
