--- a/3.tinkerPatch的用法.md
+++ b/3.tinkerPatch的用法.md
@@ -9,7 +9,7 @@
 
 ## 2.遇到的坑:
 
-### 2.1 多渠道打包时出现了编译错误
+### 2.1 Windows的AndroidStudio多渠道打包时出现了编译错误
 
 ```
 Execution failed for task ':tinkerpatch:tinkerProcessFlavor1ReleaseResourceId'.
