--- a/3.tinkerPatch的用法.md
+++ b/3.tinkerPatch的用法.md
@@ -7,6 +7,8 @@
 
 　　配置参考本项目中的moudle: "tinkerpatch"
 
+<font color=red>在 build 目录下生成基准包后，请把 intermediates 先删除再生成补丁包</font>
+
 ## 2.遇到的坑:
 
 ### 2.1 Windows的AndroidStudio多渠道打包时出现了编译错误
